--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -2,27 +2,44 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-image:url("/photos/background.jpg") ;
     background-size: cover;
+    height: 5000px;
 }
 .navbar{
-    background-color: #e96a6a;
-    border-radius: 5px;
     padding: 0.1px;
-    border: 5px solid #98b868;
     margin: 0px;
+    display: flex;
+    flex-direction: row-reverse;
 }
 a:link{
     text-decoration: none;
 }
+a:hover{
+    color: rgb(255, 0, 0);
+}
+a:visited{
+    color: cyan;
+}
+
+.navbar::before{
+    background-image: url("/photos/background.jpg");
+    background-size: cover;
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.3;
+}
 .navbar li {
     display: inline;
     padding: 10px;
-    color: #05386B;
-    font-size: 18px;
-    overflow: auto;
+    font-size: 25px;
     text-decoration: none;
     font-family: 'Fuzzy Bubbles', cursive;
+    position: sticky;
 }
 .photo{
     box-sizing: border-box;
@@ -37,7 +54,7 @@ a:link{
     margin-top: 50px;
     width: 155px;
     height: 198px;
-    border: 2px solid black
+    /* border: 2px solid black */
 }
 
 .desc {
@@ -63,11 +80,11 @@ a:link{
     position: absolute;
     bottom: 0px;
     width: 100%;
-    color:#EDF5E1;
+    /* color:#EDF5E1; */
 }
 #link_text{
     font-size: 25px;
 }
 #link{
-    color: rgb(255, 0, 0);
+    /* color: rgb(255, 0, 0); */
 }
