--- a/css/story.css
+++ b/css/story.css
@@ -1,27 +1,44 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-image:url("/photos/background.jpg") ;
-    background-size: cover;
 }
 .navbar{
-    background-color: #e96a6a;
-    border-radius: 5px;
     padding: 0.1px;
-    border: 5px solid #98b868;
     margin: 0px;
+    display: flex;
+    flex-direction: row-reverse;
 }
+
+
+.navbar::before{
+    background-image: url("/photos/background.jpg");
+    background-size: cover;
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.8;
+}
+
 a:link{
     text-decoration: none;
 }
+
+a:visited{
+    color: cyan;
+}
+
+
 .navbar li {
     display: inline;
     padding: 10px;
-    color: #05386B;
-    font-size: 18px;
-    overflow: auto;
+    font-size: 25px;
     text-decoration: none;
     font-family: 'Fuzzy Bubbles', cursive;
+    position: sticky;
 }
 
 
@@ -31,9 +48,6 @@ a:link{
     font-size: 25px;
     font-family: 'Fuzzy Bubbles', cursive;
     color:#ffd900;
-}
-.link{
-    color: rgb(255, 0, 0);
 }
 
 #foot{
