--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -3,80 +3,209 @@ body{
     margin: 0px;
     padding: 0px;
 }
-.navbar{
-    padding: 0.1px;
-    margin: 0px;
-    display: flex;
-    flex-direction: row-reverse;
-}
-a:link{
-    text-decoration: none;
-}
-a:visited{
-    color: cyan;
+
+html{
+    scroll-behavior: smooth;
+    height: 1000px;
 }
 
-.navbar::before{
-    background-image: url("/photos/background.jpg");
-    background-size: cover;
+/* NAVBAR */
+
+#navbar{
+    background-color: #20232a;
+    position: sticky;
+    top: 0;
+    left: 0;
+    padding: 3px;
+}
+#navbar ul{
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    margin: 6px 0px;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
+#navbar ul li{
+    font-style: none;
+    border-radius: 23px;
+    margin: 5px;
+    transition-property: background-color;
+    padding: 6px 6px;
+    font-family: 'Fuzzy Bubbles', cursive;
+}
+
+#navbar ul li a {
+    font-size: 19px;
+    padding: 9px;
+    margin: 6px;
+}
+
+#navbar ul li a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+    padding: 8px 10px;
+    background-color: white;
+    border-radius: 23px;
+}
+#navbar ul li a:hover{
+    background-color: #61dafb;
+}
+
+
+/* PROFILE */
+
+#intro{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    padding-top:10px;
+    padding-bottom: 15px;
+    margin-bottom: 5px;
+}
+#intro::before{
     content: "";
     position: absolute;
-    top:0;
-    left: 0;
-    width: 100%;
+    background-color: #1d1e20;;
+    top:0px;
+    left:0px;
     height: 100%;
+    width:100%;
     z-index: -1;
-    opacity: 0.8;
-}
-.navbar li {
-    display: inline;
-    padding: 10px;
-    font-size: 25px;
-    text-decoration: none;
-    font-family: 'Fuzzy Bubbles', cursive;
-    position: sticky;
 }
 .photo{
-    box-sizing: border-box;
     display: inline;
     width: 45%;
     height: 162px;
-    margin: 6px;
-    margin-top: 8px;
+    margin-left: 35px;
+    margin-top: 25px;
+    flex: 1 2 auto;
 }
 
 .photo img{
-    margin-top: 50px;
-    width: 155px;
-    height: 198px;
-    /* border: 2px solid black */
+    margin-top: 40px;
+    width: 220px;
+    height: 250px;
+    padding: 2px;
+    border: 4px solid #61dafb;
+    border-radius: 23px;
 }
 
 .desc {
-    float: right;
+    flex: 2 1 auto;
+    flex-basis: 5;
     box-sizing: border-box;
     display: inline;
-    width: 83%;
+    width: 100%;
     height: auto;
     margin: 6px;
     padding:14px;
-    border-radius: 15px;
     margin-top: 15px;
     font-family: 'Fuzzy Bubbles', cursive;
     font-size: 25px;
     font-weight: 700;
-    color:#ffd900;
-    
+    color:#61dafb;
 }
 
-#foot{
-    text-align: center;
-    font-weight: 700;
-    position: absolute;
-    bottom: 0px;
+#link_text a, a:hover, a:focus, a:active{
+    text-decoration: none;
+    padding-left: 7px;
+    padding-right: 7px;
+    border-radius: 23px;
+
+}
+
+/* STORY */
+
+#story{
+    background-color:#282c34 ;
+    padding-top: 35px;
+    padding-bottom: 35px;
+    margin-top: -20px;
+    margin-bottom: 10px;
+
+}
+
+#content{
     width: 100%;
-    /* color:#EDF5E1; */
-}
-#link_text{
+    height: auto;
+    margin: 6px;
+    padding:14px;
+    margin-top: 15px;
+    font-family: 'Fuzzy Bubbles', cursive;
     font-size: 25px;
+    font-weight: 700;
+    color:#61dafb;
 }
+
+#content a, a:hover, a:focus, a:active{
+    text-decoration: none;
+    border-radius: 23px;
+}
+#content a:hover{
+    padding-left: 7px;
+    padding-right: 7px;
+}
+/* INTEREST */
+#interest{
+    display: grid;
+    grid-template-rows:  repeat(2,1fr);
+    grid-template-columns: repeat(3,1fr);
+    background-color: #1d1e20 ;
+    height: 500px;
+    padding: 20px;
+    row-gap: 30px;
+    column-gap: 40px ;
+    padding-top: 75px;
+
+}
+
+.item{
+    background-color: #1d1e20 ;
+    text-align: center;
+    border-radius: 23px;
+    border: 4px solid #61dafb;
+    color: #61dafb;
+    font-family: 'Fuzzy Bubbles', cursive;
+}
+
+
+/* CONTACT ME */
+
+
+#contact_me{
+    background-color: #282c34;
+}
+
+
+#starting,#contact_details {
+    text-align: center;
+    font-family: 'Fuzzy Bubbles', cursive;
+    font-size: 25px;
+    margin-bottom: 0px;
+    color:#61dafb;;
+}
+
+#starting{
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.links{
+    display: flexbox;
+}
+.links img{
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+}
+
+.links{
+    text-align: center;
+    width: auto;
+    height: auto;
+}
+
+/*  */
