--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -33,7 +33,7 @@ html{
     margin: 5px;
     transition-property: background-color;
     padding: 6px 6px;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #navbar ul li a {
@@ -103,7 +103,7 @@ html{
     margin: 6px;
     padding:14px;
     margin-top: 15px;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 700;
     color:#61dafb;
@@ -134,7 +134,7 @@ html{
     margin: 6px;
     padding:14px;
     margin-top: 15px;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 700;
     color:#61dafb;
@@ -163,12 +163,12 @@ html{
 }
 
 .item{
-    background-color: #1d1e20 ;
+    background-color: #282c34; ;
     text-align: center;
     border-radius: 23px;
     border: 4px solid #61dafb;
     color: #61dafb;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -182,7 +182,7 @@ html{
 
 #starting,#contact_details {
     text-align: center;
-    font-family: 'Fuzzy Bubbles', cursive;
+    font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     margin-bottom: 0px;
     color:#61dafb;;
