--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -6,7 +6,6 @@ body{
 
 html{
     scroll-behavior: smooth;
-    height: 1000px;
 }
 
 /* NAVBAR */
@@ -42,7 +41,7 @@ html{
     margin: 6px;
 }
 
-#navbar ul li a, a:hover, a:focus, a:active {
+#navbar ul li a, #navbar ul li a:hover, #navbar ul li a:focus,#navbar ul li a:active {
     text-decoration: none;
     color: inherit;
     padding: 8px 10px;
@@ -109,7 +108,7 @@ html{
     color:#61dafb;
 }
 
-#link_text a, a:hover, a:focus, a:active{
+#link_text a, #link_text a:hover, #link_text a:focus, #link_text a:active{
     text-decoration: none;
     padding-left: 7px;
     padding-right: 7px;
@@ -121,33 +120,34 @@ html{
 
 #story{
     background-color:#282c34 ;
-    padding-top: 35px;
-    padding-bottom: 35px;
+    padding-top: 45px;
+    padding-bottom: 38px;
     margin-top: -20px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 
 }
 
 #content{
-    width: 100%;
+    width: 99%;
     height: auto;
     margin: 6px;
-    padding:14px;
-    margin-top: 15px;
+    padding:0px;
+    padding-left: 3px;
+    margin-top: 12px;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     font-weight: 700;
     color:#61dafb;
 }
 
-#content a, a:hover, a:focus, a:active{
+#content a, #content a:hover, #content a:focus, #content a:active{
     text-decoration: none;
     border-radius: 23px;
 }
 #content a:hover{
-    padding-left: 7px;
-    padding-right: 7px;
+    padding: 1px 2px;
 }
+
 /* INTEREST */
 #interest{
     display: grid;
@@ -155,7 +155,8 @@ html{
     grid-template-columns: repeat(3,1fr);
     background-color: #1d1e20 ;
     height: 500px;
-    padding: 20px;
+    padding: 15px;
+    padding-top: 0px;
     row-gap: 30px;
     column-gap: 40px ;
     padding-top: 75px;
@@ -189,23 +190,20 @@ html{
 }
 
 #starting{
-    margin-top: 10px;
+    margin-top: 0px;
     padding-top: 10px;
 }
 
 .links{
     display: flexbox;
-}
-.links img{
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-}
-
-.links{
     text-align: center;
     width: auto;
     height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-
-/*  */
+.links img{
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+}
