--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -108,12 +108,19 @@ html{
     color:#61dafb;
 }
 
-#link_text a, #link_text a:hover, #link_text a:focus, #link_text a:active{
+#link_text a, #link_text a:focus, #link_text a:active{
     text-decoration: none;
     padding-left: 7px;
     padding-right: 7px;
     border-radius: 23px;
 
+}
+#link_text a:hover{
+    text-decoration: none;
+    color: inherit;
+    padding: 8px 10px;
+    background-color: white;
+    border-radius: 23px;
 }
 
 /* STORY */
@@ -144,7 +151,13 @@ html{
     text-decoration: none;
     border-radius: 23px;
 }
+
 #content a:hover{
+    text-decoration: none;
+    color: inherit;
+    padding: 8px 10px;
+    background-color: white;
+    border-radius: 23px;
     padding: 1px 2px;
 }
 
