--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -70,7 +70,7 @@ html{
     background-color: #1d1e20;;
     top:0px;
     left:0px;
-    height: 100%;
+    height: 325%;
     width:100%;
     z-index: -1;
 }
@@ -167,7 +167,7 @@ html{
     grid-template-rows:  repeat(2,1fr);
     grid-template-columns: repeat(3,1fr);
     background-color: #1d1e20 ;
-    height: 600px;
+    height: auto;
     padding: 15px;
     padding-top: 0px;
     row-gap: 30px;
