--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -22,16 +22,15 @@ html{
     align-items: center;
     list-style-type: none;
     margin: 6px 0px;
-    justify-content: flex-end;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 #navbar ul li{
     font-style: none;
-    border-radius: 23px;
-    margin: 5px;
+    margin: 6px 9px;
     transition-property: background-color;
-    padding: 6px 6px;
+    padding: 6px 0px;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -46,11 +45,14 @@ html{
     color: inherit;
     padding: 8px 10px;
     background-color: white;
-    border-radius: 23px;
+    border-radius: 10px;
 }
 #navbar ul li a:hover{
     background-color: #61dafb;
+    border-radius: 18px;
 }
+
+
 
 
 /* PROFILE */
@@ -84,10 +86,8 @@ html{
 }
 
 .photo img{
-    margin-top: 40px;
     width: 220px;
     height: 250px;
-    padding: 2px;
     border: 4px solid #61dafb;
     border-radius: 23px;
 }
@@ -110,18 +110,21 @@ html{
 
 #link_text a, #link_text a:focus, #link_text a:active{
     text-decoration: none;
+    color: #1f48eb;
     padding-left: 7px;
     padding-right: 7px;
     border-radius: 23px;
-
+    
 }
-#link_text a:hover{
+/* #link_text a:hover{
     text-decoration: none;
     color: inherit;
     padding: 8px 10px;
     background-color: white;
     border-radius: 23px;
-}
+} */
+
+
 
 /* STORY */
 
@@ -131,7 +134,7 @@ html{
     padding-bottom: 38px;
     margin-top: -20px;
     margin-bottom: 0px;
-
+    
 }
 
 #content{
@@ -173,7 +176,7 @@ html{
     row-gap: 30px;
     column-gap: 40px ;
     padding-top: 75px;
-
+    
 }
 
 .item{
@@ -223,3 +226,34 @@ html{
     padding-left: 3px;
     padding-right: 3px;
 }
+
+/*  Media Queries*/
+/* @media (max-width:650px)  {
+    #navbar{
+        background-color:red 
+    }
+    #navbar ul li a{
+        font-size: 15px;
+    }
+}
+
+@media (max-width:566px)  {
+    #navbar{
+        background-color:red 
+    }
+    #navbar ul li a{
+        font-size: 12px;
+    }
+}
+
+@media (max-width:400px)  {
+    #navbar{
+        background-color:red 
+    }
+    #navbar ul{
+        display: grid;
+    }
+    #navbar ul li a{
+        font-size: 13px;
+    }
+} */
